Bug 1328093 - HTMLEditor::InsertTextWithQuotations() should include the first line break into the <span> it creates. r=masayuki a=jcristau